fix profile container alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -40,7 +40,7 @@ body {
   border-radius: 20px;
   max-width: 90%;
   width: 100%;
-  margin: 20px auto;
+  margin: 0px auto 20px auto;
   padding: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   display: flex;
